--- a/app/src/main/res/layout/activity_loginpg.xml
+++ b/app/src/main/res/layout/activity_loginpg.xml
@@ -52,6 +52,8 @@
         android:hint="username">
         <requestFocus/>
 
+
+
     </EditText>
 
     <TextView
@@ -109,7 +111,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="55dp"
+        android:layout_marginLeft="65dp"
         android:layout_marginTop="400dp"
         android:gravity="center"
         android:textSize="10dp">
@@ -117,10 +119,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="0dp"
+            android:layout_marginLeft="30dp"
             android:id="@+id/TVforgetPass"
             android:text="Forget Password/"
-
+            android:textColor="@color/colorPrimary"
             android:textStyle="italic" />
 
         <TextView
@@ -128,6 +130,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/TVregistration"
             android:text="New Registration"
+            android:textColor="@color/colorPrimary"
             android:textStyle="italic" />
     </LinearLayout>
 
