--- a/app/src/main/res/layout/activity_stock__out.xml
+++ b/app/src/main/res/layout/activity_stock__out.xml
@@ -41,7 +41,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/cnameEditText"
+                    android:id="@+id/stockout_uniqIdET"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
 
@@ -66,7 +66,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/dateEditText"
+                    android:id="@+id/stockout_dateET"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
 
@@ -92,10 +92,10 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/billnoEditText"
+                    android:id="@+id/stockout_billnoET"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-
+                    android:inputType="number"
                     android:background="@drawable/border_table"
                     android:hint="Enter bill no. "
 
@@ -117,7 +117,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/customernameEditText"
+                    android:id="@+id/stockout_CnameET"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:background="@drawable/border_table"
@@ -133,7 +133,7 @@
                 android:paddingTop="13dp">
 
                 <TextView
-                    android:id="@+id/conNo"
+                    android:id="@+id/stockout_conNo"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
 
@@ -142,12 +142,14 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/conoEditText"
+                    android:id="@+id/stockout_conoET"
                     android:background="@drawable/border_table"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:width="100px"
                     android:hint="Enter contact no"
+                    android:inputType="number"
+                    android:maxLength="10"
 
                     android:textSize="15dp" />
             </TableRow>
@@ -168,7 +170,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/addessEditText"
+                    android:id="@+id/stockout_addessET"
                     android:layout_width="wrap_content"
                     android:background="@drawable/border_table"
                     android:layout_height="25dp"
@@ -197,7 +199,7 @@
                     android:textStyle="bold" />
 
                 <Button
-                    android:id="@+id/barcoadbtn"
+                    android:id="@+id/stockout_barcoadbtn"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="0dp"
@@ -221,7 +223,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/itemnameEditText"
+                    android:id="@+id/stockout_itemnameET"
                     android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
@@ -250,7 +252,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/availableQuantityEditText"
+                    android:id="@+id/stockout_avilQET"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
@@ -278,27 +280,31 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/loadEditText"
+                    android:id="@+id/stockout_opnET"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
+                    android:textSize="15dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter page no."
                     />
 
-                <Button
-                    android:id="@+id/page"
-                    android:layout_width="80dp"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="0dp"
-                    android:text="Open page"
-
-                    android:textSize="13dp" />
 
             </TableRow>
 
 
+
+
         </TableLayout>
+        <Button
+            android:id="@+id/stockout_opnbtn"
+            android:layout_width="90dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="470dp"
+
+            android:text="Open page"
+            android:textSize="10dp" />
 
 
         <ImageView android:layout_width="40dp"
@@ -306,6 +312,9 @@
             android:src="@drawable/plus_button"
             android:layout_marginLeft="314dp"
             android:layout_marginTop="480dp"
+            android:id="@+id/stockout_img"
+            android:onClick="addstockOut"
+
             />
 
         <Button
@@ -313,6 +322,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="520dp"
             android:gravity="center"
+            android:id="@+id/stockout_submitbtn"
             android:layout_marginLeft="130dp"
             android:text="Submit" />
 
