--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -96,7 +96,7 @@
                     android:id="@+id/stockInBillNumber"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-
+                    android:inputType="number"
                     android:background="@drawable/border_table"
                     android:hint="Enter bill no. "
 
@@ -123,7 +123,7 @@
                     android:layout_height="25dp"
                     android:background="@drawable/border_table"
 
-                    android:hint="Enter name "
+                    android:hint="Enter Suppliername "
 
                     android:textSize="15dp" />
             </TableRow>
@@ -147,8 +147,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:width="100px"
+                    android:inputType="number"
                     android:background="@drawable/border_table"
                     android:hint="Enter contact no"
+                    android:maxLength="10"
 
                     android:textSize="15dp" />
             </TableRow>
@@ -197,7 +199,7 @@
                     android:textStyle="bold" />
 
                 <Button
-                    android:id="@+id/stockInFormBarcodeScan"
+                    android:id="@+id/stockInBarcodebtn"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginTop="0dp"
@@ -283,35 +285,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
+                    android:textSize="15dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter page no."
                     android:inputType="number" />
 
-                <Button
-                    android:id="@+id/page"
-                    android:layout_width="80dp"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="0dp"
-                    android:onClick="openStockInPage"
-                    android:text="Open page"
-                    android:textSize="13dp" />
+
 
             </TableRow>
 
 
+
         </TableLayout>
+
+        <Button
+            android:id="@+id/stockIn_opnbtn"
+            android:layout_width="90dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="470dp"
+            android:onClick="openStockInPage"
+            android:text="Open page"
+            android:textSize="10dp" />
+
 
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="30dp"
-            android:layout_marginLeft="314dp"
+            android:layout_marginLeft="313dp"
             android:layout_marginTop="480dp"
             android:onClick="addStockIn"
             android:src="@drawable/plus_button" />
 
         <Button
-            android:id="@+id/stockInFormSubmit"
+            android:id="@+id/stockInSubmitbtn"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="130dp"
