--- a/app/src/main/res/layout/activity_stock__out.xml
+++ b/app/src/main/res/layout/activity_stock__out.xml
@@ -205,6 +205,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="90dp"
                     android:gravity="center"
+                    android:onClick="scanQR"
                     android:text="Scan " />
             </TableRow>
 
@@ -276,7 +277,6 @@
                     android:layout_height="wrap_content"
                     android:text="Open Page:"
                     android:textSize="15dp"
-
                     android:textStyle="bold" />
 
                 <EditText
@@ -302,7 +302,7 @@
             android:layout_height="32dp"
             android:layout_marginLeft="130dp"
             android:layout_marginTop="470dp"
-
+            android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
 
