--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -205,6 +205,7 @@
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="90dp"
                     android:gravity="center"
+                    android:onClick="scanQR"
                     android:text="Scan " />
             </TableRow>
 
