--- a/app/src/main/res/layout/activity_monitor_activity.xml
+++ b/app/src/main/res/layout/activity_monitor_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Monitor_activity">
+    tools:context=".ProductDetail.Monitor_activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -50,13 +50,17 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/monitor_LED"/>
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="45dp"
-            android:text="Submit"
-            android:id="@+id/monitor_subbtn1"
-            android:layout_gravity="center"/>
     </LinearLayout>
+   
+
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="45dp"
+        android:text="Submit"
+        android:id="@+id/monitor_subbtn1"
+        android:layout_gravity="center"/>
+
 
 
 </ScrollView>
