--- a/app/src/main/res/layout/activity_printer_activity.xml
+++ b/app/src/main/res/layout/activity_printer_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Printer_activity">
+    tools:context=".ProductDetail.Printer_activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -29,59 +29,117 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="HP"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/printer_compyname1"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Canon"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/printer_compyname2"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Samsung"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/printer_compyname3"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Brother"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/printer_compyname4"/>
-        <TextView
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Printer Type :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Black/White"
-            android:textSize="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/printer_type1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Laser"
-            android:textSize="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/printer_type2"/>
+            android:layout_height="match_parent">
+            <TableLayout
+               android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                >
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Printer Type :"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+                </TableRow>
+            </TableLayout>
+
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="50dp"
+              android:layout_marginRight="150dp">
+                <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:paddingTop="13dp">
+                    <CheckBox
+                        android:id="@+id/printer_type1"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Black/White Laser"
+                        android:textSize="13dp" />
+                    <CheckBox
+                        android:id="@+id/printer_type2"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Black/White Laser"
+                        android:textSize="13dp" />
+
+
+
+
+
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="311dp"
+                    android:layout_height="fill_parent">
+
+                    <CheckBox
+                        android:id="@+id/printer_type3"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Black/White Laser"
+                        android:textSize="13dp" />
+
+                    <CheckBox
+                        android:id="@+id/printer_type4"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Color Laser"
+                        android:textSize="13dp" />
+
+
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
