--- a/app/src/main/res/layout/activity_ram_activity.xml
+++ b/app/src/main/res/layout/activity_ram_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RAM_activity">
+    tools:context=".ProductDetail.RAM_activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -18,20 +18,22 @@
             android:textSize="20dp"
             android:background="#F77F76"
             />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Types Of RAM:"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="16dp"/>
-    <CheckBox
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="16dp"
+            android:text="Types Of RAM:"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SRAM"
         android:textSize="13dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
         android:id="@+id/RAM_type1"/>
     <CheckBox
@@ -39,14 +41,14 @@
         android:layout_height="wrap_content"
         android:text="DRAM"
         android:textSize="13dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
         android:id="@+id/RAM_type2"/>
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="SDRAM"
         android:layout_marginLeft="16dp"
         android:id="@+id/RAM_type3"/>
@@ -55,14 +57,14 @@
         android:layout_height="wrap_content"
         android:text="DDR"
         android:textSize="13dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
         android:id="@+id/RAM_type4"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="SDRAM"
             android:layout_marginLeft="16dp"
             android:id="@+id/RAM_type5"/>
@@ -71,7 +73,7 @@
             android:layout_height="wrap_content"
             android:text="DDR2"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/RAM_type6"/>
         <CheckBox
@@ -79,7 +81,7 @@
             android:layout_height="wrap_content"
             android:text="DDR3"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/RAM_type7"/>
         <CheckBox
@@ -87,7 +89,7 @@
             android:layout_height="wrap_content"
             android:text="DDR4"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/RAM_type8"/>
         <Button
