--- a/app/src/main/res/layout/activity_stock__out.xml
+++ b/app/src/main/res/layout/activity_stock__out.xml
@@ -25,6 +25,58 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:paddingTop="70dp">
+            <TableRow
+                android:layout_width="200dp"
+                android:layout_height="fill_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/barcoad"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Barcode:"
+
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/stockout_barcoadbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginRight="90dp"
+                    android:gravity="center"
+                    android:onClick="scanQR"
+                    android:text="Scan " />
+            </TableRow>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/itemname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ITEM name :"
+                    android:textSize="15dp"
+
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/stockout_itemnameET"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/border_table"
+                    android:hint="Enter item name"
+                    android:textSize="15dp"
+
+
+                    />
+
+
+            </TableRow>
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -36,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
 
-                    android:text="Customer uniq ID:"
+                    android:text="Customer  ID:"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
@@ -183,53 +235,27 @@
 
 
             </TableRow>
-
-            <TableRow
-                android:layout_width="200dp"
-                android:layout_height="fill_parent"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/barcoad"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Barcode:"
-
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/stockout_barcoadbtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginRight="90dp"
-                    android:gravity="center"
-                    android:onClick="scanQR"
-                    android:text="Scan " />
-            </TableRow>
-
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:paddingTop="13dp">
 
                 <TextView
-                    android:id="@+id/itemname"
+                    android:id="@+id/stockout_quan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="ITEM name :"
+                    android:text="No.Of Quantity Out:"
                     android:textSize="15dp"
 
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/stockout_itemnameET"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/stockout_qaunET"
+                    android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter item name"
+                    android:hint="Enter quantity"
                     android:textSize="15dp"
 
 
@@ -237,6 +263,10 @@
 
 
             </TableRow>
+
+
+
+
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -258,7 +288,7 @@
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter quantity"
+                    android:hint=""
                     android:textSize="15dp"
 
 
@@ -301,7 +331,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="470dp"
+            android:layout_marginTop="510dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -311,7 +341,7 @@
             android:layout_height="30dp"
             android:src="@drawable/plus_button"
             android:layout_marginLeft="314dp"
-            android:layout_marginTop="480dp"
+            android:layout_marginTop="510dp"
             android:id="@+id/stockout_img"
             android:onClick="addstockOut"
 
@@ -320,7 +350,7 @@
         <Button
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="520dp"
+            android:layout_marginTop="550dp"
             android:gravity="center"
             android:id="@+id/stockout_submitbtn"
             android:layout_marginLeft="130dp"
