--- a/app/src/main/res/layout/activity_switches_activity.xml
+++ b/app/src/main/res/layout/activity_switches_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Switches_activity">
+    tools:context=".ProductDetail.Switches_activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -29,25 +29,25 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="DGSOL"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/switch_compyname1"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="DLink"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/switch_compyname2"/>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Retelok"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/switch_compyname3"/>
         <CheckBox
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/switch_compyname4"/>
         <TextView
@@ -82,36 +82,85 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/switch_unmang"/>
-        <TextView
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No.of Port :"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_port1"/>
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="13dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="16dp"
-            android:id="@+id/switch_port2"/>
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="45dp"
-            android:text="Submit"
-            android:id="@+id/switch_subbtn1"
-            android:layout_gravity="center"/>
+            android:layout_height="92dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"
+                android:text="No.of Port :"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/switch_port1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="4"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/switch_port2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="5"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/switch_port3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="6"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/switch_port4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="8"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/switch_port5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="16"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/switch_port6"
+                android:layout_width="wrap_content"
+                android:layout_height="47dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="1dp"
+                android:text="24"
+                android:textSize="13dp" />
+
+            <CheckBox
+                android:id="@+id/switch_port7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:text="48"
+                android:textSize="13dp" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
