--- a/app/src/main/res/layout/activity_wifidongle_activity.xml
+++ b/app/src/main/res/layout/activity_wifidongle_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Wifidongle_activity">
+    tools:context=".ProductDetail.Wifidongle_activity">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_compyname1"/>
         <CheckBox
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_compyname2"/>
         <CheckBox
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_compyname3"/>
         <CheckBox
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_compyname4"/>
         <TextView
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:text="Prepaid"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_type1"/>
         <CheckBox
@@ -79,9 +79,70 @@
             android:layout_height="wrap_content"
             android:text="Postpaid"
             android:textSize="13dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
             android:id="@+id/dongle_type2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter Sim Detail:"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="10dp"
+           />
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textSize="13dp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp"
+            android:text="Sim Name"/>
+
+        <EditText
+            android:layout_width="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="16dp"
+            android:hint="Name"
+            android:textSize="13dp"
+            android:background="@drawable/border_table" />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textSize="13dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:text="Sim Recharg"/>
+
+        <EditText
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="16dp"
+            android:hint="RS:"
+            android:layout_marginTop="10dp"
+            android:textSize="13dp"
+            android:background="@drawable/border_table" />
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textStyle="bold"
+            android:textSize="13dp"
+            android:layout_marginTop="10dp"
+            android:text="Sim Validity"/>
+
+        <EditText
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="16dp"
+            android:hint="Date:"
+            android:layout_marginTop="10dp"
+            android:textSize="13dp"
+            android:background="@drawable/border_table" />
         <Button
             android:layout_width="200dp"
             android:layout_height="45dp"
